# mitysom_5csx_dev_board

./: .gitmodules  README.md
PCIe/: mitysom_5csx_dev_board.ipx  mitysom_5csx_dev_board.qpf  mitysom_5csx_dev_board.qsf  mitysom_5csx_dev_board.qsys  mitysom_5csx_dev_board.sdc
PCIe/hdl/: mitysom_5csx_dev_board_top.v
base_project/: mitysom_5csx_dev_board.qsf  mitysom_5csx_dev_board.qsys
dev_5csx_h5_4ya/: dev_5csx_h5_4ya.ipx  dev_5csx_h5_4ya.qpf  dev_5csx_h5_4ya.qsf  dev_5csx_h5_4ya.qsys  hps_setup.tcl
dev_5csx_h6_42a/: dev_5csx_h6_42a.qsf  dev_5csx_h6_42a.qsys  mitysom_5csx_dev_board.qpf
dev_5csx_h6_42a_displayport/: cv_control.qsys  dev_5csx_h6_42a.qpf  dev_5csx_h6_42a.qsf  dev_5csx_h6_42a.qsys  dev_5csx_h6_42a.sdc  dp_demo.hex  hps_setup.tcl
dev_5csx_h6_42a_displayport_bcon/: cv_control.qsys  dev_5csx_h6_42a.qsf  dev_5csx_h6_42a.qsys  dev_5csx_h6_42a.sdc
dev_5csx_h6_42a_hdmi/: dev_5csx_h6_42a.qsf  dev_5csx_h6_42a.qsys  dev_5csx_h6_42a.sdc  fpga_ddr_setup.tcl
dev_5csx_h6_42a_hdmi/software/hdmi/: .autotools  .cproject  .gdbinit  .project  AUTHORS  README  configure.ac
dev_5csx_h6_42a_hdmi/software/hdmi/src/: Makefile.am  config_hdmi.h  hdmi.cpp
dev_5csx_h6_4ya/: dev_5csx_h6_4ya.qsf  dev_5csx_h6_4ya.qsys  dev_5csx_h6_4ya.sdc  hps_setup.tcl
dev_5csx_h6_4ya_bcon/: dev_5csx_h6_4ya.qpf  dev_5csx_h6_4ya.qsf  dev_5csx_h6_4ya.qsys  dev_5csx_h6_4ya.sdc  gbl_clock.qsys
dev_5csx_h6_53b/: dev_5csx_h6_53b.qpf  dev_5csx_h6_53b.qsf  dev_5csx_h6_53b.qsys  dev_5csx_h6_53b.sdc  hps_setup.tcl  hsmc1_setup.tcl
vhdl/: mitysom_5csx_dev_board_top.vhd
(+280 files in other folders)
